--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,17 @@
-html{
+html {
   box-sizing: border-box;
 }
 
-*,*::before, *::after{
+*, *::before, *::after {
   box-sizing: inherit;
 }
 
-body{
+body {
   background-color: #fdf6e3;
 }
 
-header, footer{
-font-size: 1.5rem;
+header, footer {
+  font-size: 1.5rem;
 }
 
 nav ul {
@@ -19,49 +19,49 @@ nav ul {
 }
 
 .logo {
-  text-transfrom: uppercase;
+  text-transform: uppercase;
 }
 
-.wrapper{
+.wrapper {
   background-color: #eee8d5;
 }
 
-#content, #favs,#Facts,#Types {
+#content, #favs, #Facts, #Types {
   color: #93a1a1;
 }
 
-.wrapper > .dfn{
-  background-color: #b58900
-  }
+.wrapper > .dfn {
+  background-color: #b58900;
+}
 
-  .wrapper > .dfn > strong{
-    color:#fff;
-  }
+.wrapper > .dfn > strong {
+  color: #fff;
+}
 
 a:not(.no-highlight) {
   background-color: #719e07;
 }
 
-[rel="external"]{
-background-color:#2694d8;
+a[rel="external"] {
+  background-color: #2694d8;
 }
 
-ol> li:first-child{
-  color:#719e47;
+ol > li:first-child {
+  color: #719e47;
 }
 
-ol> li:last-child{
-  color:#2aa198;
+ol > li:last-child {
+  color: #2aa198;
 }
 
-.type> li:nth-child(odd){
+.type > li:nth-child(odd) {
   background-color: #657ba3;
 }
 
-.types> li:nth-child(even){
-  background:#586e75;
+.types > li:nth-child(even) {
+  background-color: #586e75;
 }
 
-.types > li:nth-child(even) {
-  background-color:#d04b16;
+.types > li:nth-child(3n) {
+  background-color: #d04b16;
 }
